--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-firebase/analytics": "^6.0.0-alpha.25",
+    "@react-native-firebase/app": "^6.2.0",
+    "@react-native-firebase/auth": "^6.2.0",
+    "@react-native-firebase/firestore": "^6.2.0",
     "expo": "~36.0.0",
     "expo-camera": "^8.0.0",
     "expo-permissions": "^8.0.0",
