--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-firebase/app": "^6.2.0",
     "@react-native-firebase/auth": "^6.2.0",
     "@react-native-firebase/firestore": "^6.2.0",
+    "clarifai": "^2.9.1",
     "expo": "~36.0.0",
     "expo-camera": "^8.0.0",
     "expo-permissions": "^8.0.0",
